third_party/rust/cxx/v1/crate/tests/ui/async_fn.rs
#[cxx::bridge]
mod ffi {
    extern "Rust" {
        async fn f();
    }

    extern "C++" {
        async fn g();
    }
}

async fn f() {}

fn main() {}
